syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "BookWorm.Basket.Grpc";

package BasketApi;

service Basket {
    rpc GetBasket (google.protobuf.Empty) returns (BasketResponse);
}

message BasketResponse {
    string basketId = 1;
    repeated Book books = 2;
    double totalPrice = 3;
}

message Book {
    string id = 1;
    string name = 2;
    int32  quantity = 3;
    double price = 4;
    double priceSale = 5;
}